# GlioGraphSeg

./: README.md  app.py  img2graph.py  model.pth  model.py  pyproject.toml  requirements.txt
package/: LICENSE  MANIFEST.IN  README.md  pyproject.toml
package/gliographseg/: __init__.py  gliographseg.py  model.py
package/gliographseg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
