[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gliographseg"
version = "0.1.4"
description = "Graph-based brain tumor segmentation using superpixels and GNNs"
readme = "README.md"
license = "MIT"
authors = [{ name = "Salvatore Calderaro" }]
dependencies = [
  "torch",
  "torch-geometric",
  "numpy",
  "networkx",
  "scikit-image",
  "Pillow"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools.package-data]
gliographseg = ["*.pth", "GlioGraphSeg_logo.png"]